Refactor tests for improved readability and efficiency.
Removed redundant assertions, simplified method chaining, and replaced `Arrays.asList` with `List.of` for better code clarity. Optimized imports and reduced verbosity in multiple test cases while maintaining functionality.